@@ -1,3 +1,12 @@
+2006-02-24  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
+	* lib/gaupol/constants.py:
+	* lib/gaupol/gtk/application.py:
+	* lib/gaupol/gtk/entries/time.py:
+	* lib/gaupol/gtk/main.py:
+	* lib/gaupol/gtk/output.py:
+	  Cosmetic changes.
+
 2006-02-23  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
 	* lib/gaupol/gtk/dialogs/filechooser.py:
